recursion.logo.sierpinski.Sierpinski.scala.error
Erreur de compilation :
Sierpinski:1: error: not found: value levels
  if(levels==0){avance()}
     ^Sierpinski:1: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
  if(levels==0){avance()}
                      ^